tests/sksl/errors/golden/GenericArgumentMismatch.glsl
### Compilation failed:

error: 2: no match for sin(int, int)
error: 6: no match for sin(bool)
2 errors
